Latest Posts: Fix featured image alignment label position

--- a/packages/block-library/src/latest-posts/editor.scss
+++ b/packages/block-library/src/latest-posts/editor.scss
@@ -12,3 +12,13 @@
 .edit-post-visual-editor .wp-block-latest-posts.is-grid li {
 	margin-bottom: 20px;
 }
+
+.editor-latest-posts-image-alignment-control {
+	.components-base-control__label {
+		display: block;
+	}
+
+	.components-toolbar {
+		border: none;
+	}
+}
